--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -217,6 +217,8 @@
 
        @media only screen and (max-width: $bp-medium) {
         display: none;
+        margin: 0;
+        padding: 0;
 
         
     }
