--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -42,6 +42,7 @@
     justify-content: space-between;
     @media only screen and (max-width: $bp-medium) {
         display: flex;
+        flex:none;
         margin: 0;
     }
 }
